# electricity_usage

./: .gitignore  COPYING.md  FILESTRUCTURE.md  MANIFEST.in  README.md  datatransfer.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: api.rst  click.rst  code.rst  conf.py  demo.rst  index.rst  intro.rst  license.rst  usage.rst
electricity_usage/: .daemon_blubb.py.swp  __main__.py  area_codes.txt  client.py  daemon.py  daemon_blubb.py  data_dirs.py  datatransfer.json  em_data.py  job.py  test.py
electricity_usage/commands/: .run.py.swp  area_codes.py  areas.py  queue.py  run.py  start.py  status.py  stop.py
input_data/: data1.json  data2.json  test_data.json
notebooks/: demo.ipynb
src/electricity_usage/: __init__.py  daemon.py  job.py
src/electricity_usage/commands/: areas.py  queue.py  run.py  start.py
src/elus/: __main__.py  datatransfer.json  init.txt
src/elus/commands/: areas.py  run.py  start.py  stop.py
tests/: conftest.py  test_cli.py  test_cli_.py  test_daemon.py  test_electricity_usage.py  test_em_data.py
