# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for electricity_usage's version
[project]
name = "electricity_usage"
version = "0.1.1"
description = "The electricity_usage package provides a scheduler which will kick off processes only when there is a surplus in local energy production. \nFor more information see the usage documentation."
readme = "README.md"
maintainers = [
    { name = "Tim", email = "holotim@gmail.com" },
    { name = "Nemo", email = "nemo24751@gmail.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "watchdog",
    "requests",
    "platformdirs",
    "pytimeparse",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "mock",
    "pytest-cov",
    "nbval",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "sphinx_click",
]

# Command line scripts installed as part of the installation
[project.scripts]
electricity_usage = "electricity_usage.__main__:cli"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "electricity_usage",
    "electricity_usage.commands",
]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
